objects/User.object
<CustomObject>
    <fields>
        <fullName>AutoRemoveManagedLicense__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoRemoveManagedLicense</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DemoUser__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates the person is a demo user and will show in the &quot;Demo Personas&quot; component in the utility bar.  This can be changed on the user page or through the gear icon in the Demo Personas component.</description>
        <inlineHelpText>Indicates the person is a demo user and will show in the &quot;Demo Personas&quot; component in the utility bar.  This can be changed on the user page or through the gear icon in the Demo Personas component.</inlineHelpText>
        <label>Demo User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License_State__c</fullName>
        <description>Users select a state from this picklist to identify the issuing state that issued the Mortgage License. By default, it is blank.</description>
        <inlineHelpText>Select the state that issued the Mortgage License.</inlineHelpText>
        <label>Mortgage License State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__US_States_Abbreviated</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mortgage_License__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique Mortgage License number. By default, it is blank.</description>
        <inlineHelpText>Enter the user&apos;s unique Mortgage License number.</inlineHelpText>
        <label>Mortgage License</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NMLS__c</fullName>
        <description>Administrators populate this mandatory field to capture a user&apos;s unique National Mortgage Licensing System (NMLS) number. By default, it is blank.</description>
        <inlineHelpText>Enter the user&apos;s unique National Mortgage Licensing System (NMLS) number.</inlineHelpText>
        <label>NMLS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Officer_Number__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify a unique number assigned to the user (officer).</description>
        <label>Officer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Secured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s secured lending authority.</description>
        <label>Secured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unsecured_Individual_Lending_Authority__c</fullName>
        <description>This field is manually populated. It is optional. This field is used to specify the amount (currency) of the user&apos;s unsecured lending authority.</description>
        <label>Unsecured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__nCino_User__c</fullName>
        <description>This field is automatically populated as enabled. This field indicates whether the user has a license for the nCino Platform or not.</description>
        <formula>TRUE</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>nCino User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lending_ID__c</fullName>
        <inlineHelpText>This can be used to identify the loan officer ID or other unique code used internally.</inlineHelpText>
        <label>Lending ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <label>Line of Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business Banking</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>Global Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale_Criteria_for_PB__c</fullName>
        <label>Locale Criteria for PB</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English Australian</fullName>
                </value>
                <value>
                    <fullName>English U.S</fullName>
                </value>
                <value>
                    <fullName>English Canadian</fullName>
                </value>
                <value>
                    <fullName>English U.K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managers_Manager__c</fullName>
        <label>Manager&apos;s Manager</label>
        <relationshipName>Manager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Primary_Branch__c</fullName>
        <label>Primary Branch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AACT</fullName>
                </value>
                <value>
                    <fullName>Asheville</fullName>
                </value>
                <value>
                    <fullName>Benton Harbor</fullName>
                </value>
                <value>
                    <fullName>Berrien Springs</fullName>
                </value>
                <value>
                    <fullName>Bible Way</fullName>
                </value>
                <value>
                    <fullName>Buchanan</fullName>
                </value>
                <value>
                    <fullName>Double R</fullName>
                </value>
                <value>
                    <fullName>Fletcher</fullName>
                </value>
                <value>
                    <fullName>Griffith</fullName>
                </value>
                <value>
                    <fullName>Gwinner</fullName>
                </value>
                <value>
                    <fullName>Holland North</fullName>
                </value>
                <value>
                    <fullName>Holland South</fullName>
                </value>
                <value>
                    <fullName>Jenny Lind</fullName>
                </value>
                <value>
                    <fullName>Marion East</fullName>
                </value>
                <value>
                    <fullName>Marion West</fullName>
                </value>
                <value>
                    <fullName>Mortgage Call Center</fullName>
                </value>
                <value>
                    <fullName>Niles North</fullName>
                </value>
                <value>
                    <fullName>Niles South</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Reed Highschool</fullName>
                </value>
                <value>
                    <fullName>Rogers Ave</fullName>
                </value>
                <value>
                    <fullName>Sparks</fullName>
                </value>
                <value>
                    <fullName>St. Joseph</fullName>
                </value>
                <value>
                    <fullName>Statesville</fullName>
                </value>
                <value>
                    <fullName>Stevensville</fullName>
                </value>
                <value>
                    <fullName>United Online</fullName>
                </value>
                <value>
                    <fullName>Van Buren</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Region__c</fullName>
        <label>Primary Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>N Michigan</fullName>
                </value>
                <value>
                    <fullName>North Carolina</fullName>
                </value>
                <value>
                    <fullName>S Michigan/Ohio/Indiana</fullName>
                </value>
                <value>
                    <fullName>United Online</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Secured_Individual_Lending_Authority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Secured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Template_Identifier__c</fullName>
        <description>Demo Spin Template Identifier</description>
        <label>Template Identifier</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Unsecured_Individual_Lending_Authority__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Unsecured Individual Lending Authority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Digitized_Signature__c</fullName>
        <inlineHelpText>This will be used to maintain User&apos;s Signature for Forms Generation.</inlineHelpText>
        <label>User Digitized Signature</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>nBIDCA__nCino_Data_User2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>nCino Analytics Reporting Field referenced in Created in nCino formula field</description>
        <inlineHelpText>Check box to indicate this user account is used for importing records via Informatica or API.</inlineHelpText>
        <label>nCino Data User2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Bridger_Password__c</fullName>
        <description>Password for Bridger login</description>
        <label>Bridger Password</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>nBRIDGER__Bridger_Username__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Username for Bridger login</description>
        <label>Bridger Username</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nPortal__Has_Reached_Ownership_Limit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field indicates if the user has reached the configured maximum number of owned Accounts for role optimization</description>
        <label>Has Reached Ownership Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Is_Customer_Portal_Account_Owner_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox field indicates whether or not this user owns Customer Portal user records.</description>
        <label>Is Customer Portal Account Owner User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nPortal__Sharing_History__c</fullName>
        <description>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</description>
        <inlineHelpText>This long text field is automatically populated upon the deactivation of a Customer Portal User. It is used to capture all of the records to which the Portal User had sharing access.</inlineHelpText>
        <label>Customer Portal Sharing History</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__User_Created_Customer_Engagement_PW__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field if the user has created their own password for the Customer Engagement Solution (such as through self-registration, an online application workflow, or Single Sign-On).</description>
        <label>User-Created Customer Engagement PW</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>“F”, “M”, “U”</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Lendable_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the lender is allowed to make loans outside of the their area of operations.</description>
        <inlineHelpText>Indicates whether the lender is allowed to make loans outside of the their area of operations.</inlineHelpText>
        <label>Lendable Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Lender_Tax_ID__c</fullName>
        <description>Returns Company Tax ID Custom Label</description>
        <formula>$Label.nsba__company_tax_id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lender Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__SBA_Lender_FIRS__c</fullName>
        <description>Returns SBA Lender FIRS Tax ID Custom Label</description>
        <formula>$Label.nsba__sba_firs</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SBA Lender FIRS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nmls_number__c</fullName>
        <inlineHelpText>This is the lender&apos;s NMLS number.</inlineHelpText>
        <label>NMLS Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Managers_Manager__c</columns>
        <columns>Secured_Individual_Lending_Authority__c</columns>
        <columns>Unsecured_Individual_Lending_Authority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>Secured_Individual_Lending_Authority__c</columns>
        <columns>Unsecured_Individual_Lending_Authority__c</columns>
        <columns>MANAGER</columns>
        <columns>Managers_Manager__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.PHONE</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>App_Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>nCino Community User</value>
        </filters>
        <label>App/Portal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LLC_BI__ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Remove_Managed_License_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AutoRemoveManagedLicense__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Remove Managed License Users</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>